--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <div id="loaded" style="display:none;">
 	
 	<video playsinline autoplay muted loop poster="https://panaviscope.com/front/img/like-the-sun-video/like-the-sun.jpg" id="vidlikethesun">
-	  <source src="https://panaviscope.com/front/img/like-the-sun-video/like-the-sun.mp4" type="video/mp4">
+	  <source src="https://panaviscope.com/panaviscope.mp4" type="video/mp4">
 	</video>
 
 	<div class="viewport-header">
