--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <div id="loaded" style="display:none;">
 	
-	<video playsinline autoplay muted loop poster="https://panaviscope.com/front/img/like-the-sun-video/like-the-sun.jpg" id="vidlikethesun">
+	<video playsinline autoplay muted loop poster="https://panaviscope.com/001.png" id="vidlikethesun">
 	  <source src="https://panaviscope.com/panaviscope.mp4" type="video/mp4">
 	</video>
 
