--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 		},1500);
 	} 
 	</script>
-    	<link href="https://panaviscope.com/front/css/normalize.min.css" rel="stylesheet">
-    	<link href="https://panaviscope.com/front/css/main.css?v9" rel="stylesheet">
+    	<link href="https://panaviscope.com/normalize.min.css" rel="stylesheet">
+    	<link href="https://panaviscope.com/main.css?v9" rel="stylesheet">
   </head>
 
   <body>
