--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -60,8 +60,8 @@
 
 <div id="loaded" style="display:none;">
 	
-	<video playsinline autoplay muted loop poster="https://panaviscope.com/001.png" id="vidlikethesun">
-	  <source src="https://panaviscope.com/panaviscope.mp4" type="video/mp4">
+	<video playsinline autoplay muted loop poster="" id="vidlikethesun">
+	  <source src="https://panaviscope.com/smartlink-blow-up/video-smartlink-blow-up-720x1280.mp4" type="video/mp4">
 	</video>
 
 	<div class="viewport-header">
