--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -94,27 +94,23 @@
 			  <h1>
 			    Panaviscope
 			  </h1>
-				
-			<ul class="list-inline">
+
+			  <h2>
+			    Blow up
+			  </h2>
+
+			<ul id="services">
 				<li>
-					<!-- Spotify -->
-					<a href="https://open.spotify.com/artist/4v8etUh3qt9jHliW6kg697">
-						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6 9.6-4.298 9.6-9.6S15.302.4 10 .4zm2.964 13.437c-.148 0-.25-.056-.36-.122-1.012-.613-2.267-.935-3.627-.935-.694 0-1.443.082-2.226.242l-.094.024c-.1.024-.2.05-.28.05-.314 0-.56-.245-.56-.56 0-.317.18-.542.478-.6.934-.212 1.814-.315 2.687-.315 1.58 0 2.995.366 4.202 1.09.208.122.338.26.338.57 0 .308-.25.557-.556.557zm.778-2.183c-.177 0-.292-.067-.395-.127-1.825-1.084-4.547-1.443-6.785-.847l-.102.03c-.084.028-.164.054-.274.054-.368 0-.667-.3-.667-.672 0-.357.185-.607.523-.702.862-.236 1.674-.393 2.84-.393 1.886 0 3.714.473 5.146 1.33.26.148.378.353.378.658 0 .37-.3.67-.666.67zm.883-2.488c-.166 0-.27-.04-.42-.123-1.24-.744-3.172-1.186-5.175-1.186-1.043 0-1.99.115-2.817.338-.028.007-.055.015-.083.024-.088.025-.198.057-.312.057-.44 0-.783-.348-.783-.792 0-.386.217-.68.58-.788.997-.295 2.147-.443 3.414-.443 2.28 0 4.452.506 5.956 1.39.284.16.423.405.423.743 0 .436-.346.78-.785.78z"/></svg>
-					</a>
+					<a href="">Spotify</a>
 				</li>
 				<li>
-					<!-- YouTube -->
-					<a href="https://www.youtube.com/channel/UCQJ4AOVvLbTTLQEa0uQseDw">
-						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M11.603 9.833L9.357 8.785c-.196-.09-.357.01-.357.228v1.974c0 .217.16.32.357.228l2.245-1.048c.197-.092.197-.242 0-.334zM10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6 9.6-4.298 9.6-9.6S15.302.4 10 .4zm0 13.5c-4.914 0-5-.443-5-3.9s.086-3.9 5-3.9 5 .443 5 3.9-.086 3.9-5 3.9z"/></svg>
-					</a>
+					<a href="">YouTube</a>
 				</li>
 				<li>
-					<!-- Instagram -->
-					<a href="https://instagram.com/panaviscope">
-						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M13 10c0 1.657-1.343 3-3 3s-3-1.343-3-3c0-.17.018-.338.05-.5H6v3.997c0 .278.225.503.503.503h6.995c.277 0 .502-.225.502-.503V9.5h-1.05c.032.162.05.33.05.5zm-3 2c1.104 0 2-.896 2-2s-.896-2-2-2-2 .896-2 2 .896 2 2 2zm2.4-4.1h1.2c.165 0 .3-.135.3-.3V6.4c0-.165-.135-.3-.3-.3h-1.2c-.166 0-.3.135-.3.3v1.2c0 .165.135.3.3.3zM10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6 9.6-4.298 9.6-9.6S15.302.4 10 .4zm5 13.49c0 .61-.5 1.11-1.11 1.11H6.11C5.5 15 5 14.5 5 13.89V6.11C5 5.5 5.5 5 6.11 5h7.78C14.5 5 15 5.5 15 6.11v7.78z"/></svg>
-					</a>
+					<a href="">Apple</a>
 				</li>
 			</ul>
+				
 		</div>
 
 	</div>
