--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -67,6 +67,14 @@
 	</script>
     	<link href="https://panaviscope.com/normalize.min.css" rel="stylesheet">
     	<link href="https://panaviscope.com/main.css?v9" rel="stylesheet">
+	  <style>
+		  #services {
+			  width: 380px;
+			  background: #f5f5f5;
+			  border: 1px solid #ccc;
+			  border-radius: 5px;
+		  }
+	  </style>
   </head>
 
   <body>
