--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -68,11 +68,22 @@
     	<link href="https://panaviscope.com/normalize.min.css" rel="stylesheet">
     	<link href="https://panaviscope.com/main.css?v9" rel="stylesheet">
 	  <style>
-		  #services {
+		  ul#services {
+			  list-style-type: none;
+			  margin: 0 auto;
 			  width: 380px;
 			  background: #f5f5f5;
 			  border: 1px solid #ccc;
 			  border-radius: 5px;
+		  }
+
+		  ul#services li {
+			  padding: 5px;
+			  border-bottom: 1px solid #ccc;
+		  }
+
+		  ul#services a {
+			  color : #eee;
 		  }
 	  </style>
   </head>
