--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -71,15 +71,16 @@
 		  ul#services {
 			  list-style-type: none;
 			  margin: 0 auto;
-			  width: 380px;
+			  width: 300px;
 			  background: #f5f5f5;
 			  border: 1px solid #ccc;
 			  border-radius: 5px;
 		  }
 
 		  ul#services li {
-			  padding: 5px;
-			  border-bottom: 1px solid #ccc;
+			  list-style: none;
+			  border-bottom: 1px solid #e1e1e4;
+			  height: 80px;
 		  }
 
 		  ul#services a {
