--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -80,11 +80,14 @@
 		  ul#services li {
 			  list-style: none;
 			  border-bottom: 1px solid #e1e1e4;
-			  height: 80px;
+			  
 		  }
 
 		  ul#services a {
-			  color : #eee;
+			  display: block;
+			  height: 40px;
+			  color : #333;
+			  text-decoration: none;
 		  }
 	  </style>
   </head>
