--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -124,7 +124,10 @@
 
 			<ul id="services">
 				<li>
-					<a href="">Spotify</a>
+					<a href="https://open.spotify.com/intl-fr/album/2YoyI5ocjd6WiTJMVLAZHf">
+						<img src="https://panaviscope.com/img/spotify-logo.png">
+						<button>Play</button>
+					</a>
 				</li>
 				<li>
 					<a href="">YouTube</a>
