--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -67,29 +67,15 @@
 	</script>
     	<link href="https://panaviscope.com/normalize.min.css" rel="stylesheet">
     	<link href="https://panaviscope.com/main.css?v9" rel="stylesheet">
-	  <style>
-		  ul#services {
-			  list-style-type: none;
-			  margin: 0 auto;
-			  width: 300px;
-			  background: #f5f5f5;
-			  border: 1px solid #ccc;
-			  border-radius: 5px;
-		  }
+	  <!-- Bootstrap -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
-		  ul#services li {
-			  list-style: none;
-			  border-bottom: 1px solid #e1e1e4;
-			  
-		  }
-
-		  ul#services a {
-			  display: block;
-			  height: 40px;
-			  color : #333;
-			  text-decoration: none;
-		  }
-	  </style>
+<!-- Optional theme -->
+	  <!--
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
+	-->
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -122,20 +108,19 @@
 			    Blow up
 			  </h2>
 
-			<ul id="services">
-				<li>
-					<a href="https://open.spotify.com/intl-fr/album/2YoyI5ocjd6WiTJMVLAZHf">
-						<img src="https://panaviscope.com/img/spotify-logo.png">
-						<button>Play</button>
-					</a>
-				</li>
-				<li>
-					<a href="">YouTube</a>
-				</li>
-				<li>
-					<a href="">Apple</a>
-				</li>
-			</ul>
+			<div class="panel panel-default">
+			  <div class="panel-body">
+
+				  <a href="https://open.spotify.com/intl-fr/album/2YoyI5ocjd6WiTJMVLAZHf">
+				  	<div class="grid">
+						<p class="grid-left50">
+							<img src="https://panaviscope.com/img/spotify-logo.png" class="img-responsive" alt="Spotify">
+						</p>
+						<button class="grid-right50">Listen</button>
+					</div>
+				  </a>
+			  </div>
+			</div>
 				
 		</div>
 
