--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -69,11 +69,6 @@
     	<link href="https://panaviscope.com/main.css?v9" rel="stylesheet">
 	  <!-- Bootstrap -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
-
-<!-- Optional theme -->
-	  <!--
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap-theme.min.css" integrity="sha384-6pzBo3FDv/PJ8r2KRkGHifhEocL+1X2rVCTTkUfGk7/0pbek5mMa1upzvWbrUbOZ" crossorigin="anonymous">
-	-->
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
   </head>
@@ -114,9 +109,9 @@
 				  <a href="https://open.spotify.com/intl-fr/album/2YoyI5ocjd6WiTJMVLAZHf">
 				  	<div class="grid">
 						<p class="grid-left50">
-							<img src="https://panaviscope.com/img/spotify-logo.png" class="img-responsive" alt="Spotify">
+							<img src="https://panaviscope.com/img/spotify-logo.png" class="img-responsive" alt="Spotify" width="100">
 						</p>
-						<button class="grid-right50">Listen</button>
+						<button class="button grid-right50">Listen</button>
 					</div>
 				  </a>
 			  </div>
