--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -65,12 +65,13 @@
 		},1500);
 	} 
 	</script>
-    	<link href="https://panaviscope.com/normalize.min.css" rel="stylesheet">
-    	<link href="https://panaviscope.com/main.css?v9" rel="stylesheet">
-	  <!-- Bootstrap -->
+    	<!--<link href="https://panaviscope.com/normalize.min.css" rel="stylesheet">-->
+	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+
+    	<link href="https://panaviscope.com/main.css?v9" rel="stylesheet">
   </head>
 
   <body>
