--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -104,7 +104,7 @@
 			    Blow up
 			  </h2>
 
-			<div class="panel panel-default">
+			<div class="panel panel-default" width="320">
 			  <div class="panel-body">
 
 				  <a href="https://open.spotify.com/intl-fr/album/2YoyI5ocjd6WiTJMVLAZHf">
@@ -112,7 +112,9 @@
 						<p class="grid-left50">
 							<img src="https://panaviscope.com/img/spotify-logo.png" class="img-responsive" alt="Spotify" width="100">
 						</p>
-						<button class="button grid-right50">Listen</button>
+						<div class="grid-right50"">
+							<button class="btn btn-default>Listen</button>
+						</div>
 					</div>
 				  </a>
 			  </div>
