--- a/smartlink-blow-up/index.html
+++ b/smartlink-blow-up/index.html
@@ -113,7 +113,21 @@
 							<img src="https://panaviscope.com/img/spotify-logo.png" class="img-responsive" alt="Spotify" width="100">
 						</p>
 						<div class="grid-right50"">
-							<button class="btn btn-default>Listen</button>
+							<button class="btn btn-default>Play</button>
+						</div>
+					</div>
+				  </a>
+			  </div>
+
+			<div class="panel-body">
+
+				  <a href="https://www.youtube.com/watch?v=k-VmJC7-gNI">
+				  	<div class="grid">
+						<p class="grid-left50">
+							<img src="https://panaviscope.com/img/youtube-logo.png" class="img-responsive" alt="YouTube" width="100">
+						</p>
+						<div class="grid-right50"">
+							<button class="btn btn-default>Play</button>
 						</div>
 					</div>
 				  </a>
