--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
 			    Panaviscope
 			  </h1>
 
-			<form style="border:1px solid #ccc;padding:3px;text-align:center;" action="https://tinyletter.com/panaviscope" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/panaviscope', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Enter your email address</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
-        
-			<ul class="social-icons list-inline">
+			<div class="tinyletter" style="font-family: Baskerville;">
+				<form style="border:1px solid #fff;padding:3px;text-align:center;" action="https://tinyletter.com/panaviscope" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/panaviscope', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Join our mailing list</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+			</div>
+			
+			<ul class="social-icons list-inline" style="margin-top:30px;">
 				<li>
 					<!-- Spotify -->
 					<a href="https://open.spotify.com/artist/4v8etUh3qt9jHliW6kg697">
