--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 	</script>
     	<link href="https://panaviscope.com/normalize.min.css" rel="stylesheet">
     	<link href="https://panaviscope.com/main.css?v10" rel="stylesheet">
+	  <style>
+		  .tinyletter input[type="submit"] {
+			background: #fff;
+			border: none;
+			padding: 10px;
+			min-width: 80px;
+			font-family: Baskerville;
+			cursor: pointer;
+			outline: inherit;
+			border-radius: 5px;
+		}
+		   .tinyletter a {
+			font-family: Baskerville;
+			font-size: 18px
+		}
+	  </style>
   </head>
 
   <body>
@@ -74,7 +90,7 @@
 			    Panaviscope
 			  </h1>
 
-			<div class="tinyletter" style="font-family: Baskerville;">
+			<div class="tinyletter">
 				<form style="border:1px solid #fff;padding:3px;text-align:center;" action="https://tinyletter.com/panaviscope" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/panaviscope', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Join our mailing list</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
 			</div>
 			
