--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
 			outline: inherit;
 			border-radius: 5px;
 		}
+		  .tinyletter input[name="email"] {
+			background: #fff;
+			border: 1px white;
+			padding: 10px;
+			min-width: 120px;
+			font-family: Baskerville;
+			cursor: pointer;
+			outline: inherit;
+			border-radius: 5px;
+		}
 		   .tinyletter a {
 			font-family: Baskerville;
 			font-size: 18px
