--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			cursor: pointer;
 			outline: inherit;
 			border-radius: 5px;
+			font-size: 22px
 		}
 		  .tinyletter input[name="email"] {
 			background: #fff;
