--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 		}
 		  .tinyletter input[name="email"] {
 			background: #fff;
+			font-size: 20px
 			border: 1px white;
 			padding: 10px;
 			min-width: 180px;
