--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			  </h1>
 
 			<div class="tinyletter">
-				<form style="border:1px solid #fff;padding:3px;text-align:center;" action="https://tinyletter.com/panaviscope" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/panaviscope', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Join our mailing list</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
+				<form style="border:1px solid #fff;padding:3px;text-align:center;border-radius:5px; max-width:460px;" action="https://tinyletter.com/panaviscope" method="post" target="popupwindow" onsubmit="window.open('https://tinyletter.com/panaviscope', 'popupwindow', 'scrollbars=yes,width=800,height=600');return true"><p><label for="tlemail">Join our mailing list</label></p><p><input type="text" style="width:140px" name="email" id="tlemail" /></p><input type="hidden" value="1" name="embed"/><input type="submit" value="Subscribe" /><p><a href="https://tinyletter.com" target="_blank">powered by TinyLetter</a></p></form>
 			</div>
 			
 			<ul class="social-icons list-inline" style="margin-top:30px;">
