--- a/index.html
+++ b/index.html
@@ -135,13 +135,22 @@
         }
 
         .container {
+            position: fixed;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background: rgba(0, 0, 0, 0.4);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
             text-align: center;
-            background: rgba(0, 0, 0, 0.5);
             padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.3);
-            margin: 0 10px;
+            box-sizing: border-box;
         }
+
+
     </style>
 </head>
 <body>
