--- a/index.html
+++ b/index.html
@@ -104,26 +104,34 @@
         }
 
         a {
-            display: block;
-            background-color: #2c2c2c;
-            color: #fff;
-            text-align: center;
-            padding: 15px 25px;
-            margin: 10px 0;
-            border-radius: 10px;
-            text-decoration: none;
-            min-width: 400px; 
-            max-width: 90%;  
-            width: auto;
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-        }
+    display: block;
+    background-color: rgba(44, 44, 44, 0.8); /* Transparence */
+    color: #fff;
+    text-align: center;
+    padding: 15px 25px;
+    margin: 10px 0;
+    border-radius: 10px;
+    text-decoration: none;
+    min-width: 400px;
+    max-width: 90%;
+    width: auto;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
-        a:hover {
-            background-color: #555;
-        }
+a:hover {
+    background-color: rgba(85, 85, 85, 0.8);
+}
 
+/* Requête média pour les écrans de 480 pixels ou moins */
+@media (max-width: 480px) {
+    .link-container {
+        padding-left: 10%;
+        padding-right: 10%;
+    }
+}
+        
         #video-background {
             position: fixed;
             top: 0;
