--- a/index.html
+++ b/index.html
@@ -183,8 +183,10 @@ a:hover {
             <div class="username">@panaviscope</div>
             <div class="bio">Hacking pop music</div>
             <div class="link-container">
-                <a href="https://open.spotify.com/artist/4v8etUh3qt9jHliW6kg697">Spotify</a>
+                <a href="https://daily.xyz/artist/panaviscope">Buy my work on the Daily.xyz</a>
                 <a href="https://www.instagram.com/panaviscope/">Instagram</a>
+                <a href="https://open.spotify.com/artist/4v8etUh3qt9jHliW6kg697">Spotify</a>
+                
                 <a href="https://www.youtube.com/channel/UCQJ4AOVvLbTTLQEa0uQseDw">YouTube</a>
                 <a href="https://twitter.com/panaviscope">Twitter</a>
             </div>
