--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
             width: 100px;
             height: 100px;
             border-radius: 50%;
-            background-image: url('img/alex-portrait.png');
             background-size: cover;
             margin: 0 auto 20px auto;
         }
@@ -104,33 +103,33 @@
         }
 
         a {
-    display: block;
-    background-color: rgba(44, 44, 44, 0.8); /* Transparence */
-    color: #fff;
-    text-align: center;
-    padding: 15px 25px;
-    margin: 10px 0;
-    border-radius: 10px;
-    text-decoration: none;
-    min-width: 400px;
-    max-width: 90%;
-    width: auto;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-}
+            display: block;
+            background-color: rgba(44, 44, 44, 0.8); /* Transparence */
+            color: #fff;
+            text-align: center;
+            padding: 15px 25px;
+            margin: 10px 0;
+            border-radius: 10px;
+            text-decoration: none;
+            min-width: 400px;
+            max-width: 90%;
+            width: auto;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
+        }
 
-a:hover {
-    background-color: rgba(85, 85, 85, 0.8);
-}
-
-/* Requête média pour les écrans de 480 pixels ou moins */
-@media (max-width: 480px) {
-    .link-container {
-        padding-left: 10%;
-        padding-right: 10%;
-    }
-}
+        a:hover {
+            background-color: rgba(85, 85, 85, 0.8);
+        }
+        
+        /* Requête média pour les écrans de 480 pixels ou moins */
+        @media (max-width: 480px) {
+            .link-container {
+                padding-left: 10%;
+                padding-right: 10%;
+            }
+        }
         
         #video-background {
             position: fixed;
@@ -179,7 +178,7 @@ a:hover {
         </video>
 
         <div class="container">
-            <div class="profile-pic"></div>
+            <div class="profile-pic"><img src="img/alex-portrait.png"></div>
             <div class="username">@panaviscope</div>
             <div class="bio">Hacking pop music</div>
             <div class="link-container">
