--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             height: 50px;
         }
 
-        .profile-pic {
+        .profile-pic img {
+            display: block;
             width: 100px;
             height: 100px;
             border-radius: 50%;
