--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             height: 100px;
             border-radius: 50%;
             background-size: cover;
-            margin: 0 auto 20px auto;
+            margin: 20px auto 20px auto;
         }
 
         .username {
@@ -105,7 +105,7 @@
 
         a {
             display: block;
-            background-color: rgba(44, 44, 44, 0.8); /* Transparence */
+            background-color: rgba(44, 44, 44, 0.6);
             color: #fff;
             text-align: center;
             padding: 15px 25px;
@@ -121,14 +121,13 @@
         }
 
         a:hover {
-            background-color: rgba(85, 85, 85, 0.8);
+            background-color: rgba(85, 85, 85, 0.6);
         }
         
-        /* Requête média pour les écrans de 480 pixels ou moins */
         @media (max-width: 480px) {
             .link-container {
-                padding-left: 10%;
-                padding-right: 10%;
+                margin-left: 10%;
+                margin-right: 10%;
             }
         }
         
