--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         
         @media (max-width: 480px) {
             .link-container {
-                margin-left: 10%;
-                margin-right: 10%;
+                margin-left: 10% !important;
+                margin-right: 10% !important;
             }
         }
         
