--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
             margin: 10px 0;
             border-radius: 10px;
             text-decoration: none;
+            width: 90%;
             max-width: 460px;
             -webkit-box-sizing: border-box;
             -moz-box-sizing: border-box;
